Syntax to create file and folder in target machine from Ansible server

--- a/Create-delete-file/create.yaml
+++ b/Create-delete-file/create.yaml
@@ -12,7 +12,12 @@
       state: directory
 
   - name: copy file within target VM one location to other
-      copy:
-        src: /home/ec2-user/hello.txt
-        dest: /home/ec2-user/sampledir/hello.txt
-        remote_src: yes
+    copy:
+      src: /home/ec2-user/hello.txt
+      dest: /home/ec2-user/sampledir/hello.txt
+      remote_src: yes
+
+  - name: copy file Ansible server to Target VM
+    copy:
+      src: /home/ec2-user/hello.txt
+      dest: /home/ec2-user/ 
